--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>Hello</title>
-    <h1>Test password</h1>
   </head>
   <body>
+    <h1>Test password</h1>
     <form class="passform" action="webpage.html">
-      Password: <input type="password" required id="pass1">
+      password: <input type="password" required id="pass1">
       <input type="submit">
     </form>
   </body>
