--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         var input = document.getElementById('pass1').value;
         if(input != password) {
           alert('Wrong Password. Try again.');
+          return false;
         } else if(input) == password {
           alert('Correct password. Click ok to enter webpage!');
         }
