--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         if(input != password) {
           alert('Wrong Password. Try again.');
           return false;
-        } else if(input) == password {
+        } else if(input == password) {
           alert('Correct password. Click ok to enter webpage!');
         }
         
