--- a/st-treeoflife/submission.html
+++ b/st-treeoflife/submission.html
@@ -10,6 +10,8 @@
 
         * {
             font-family: 'Trebuchet MS', sans-serif;
+            touch-action: none;
+}
         }
 
         body {
