--- a/st-treeoflife/submission.html
+++ b/st-treeoflife/submission.html
@@ -2,16 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1 user-scalable=no">
+    <title>submission</title>
     <link rel="manifest" href="./manifest.json">
 
     <style>
 
         * {
             font-family: 'Trebuchet MS', sans-serif;
-            touch-action: none;
-}
         }
 
         body {
@@ -23,7 +21,10 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+
             overflow: hidden;
+            touch-action: none;
+
         }
 
         img {
