--- a/st-treeoflife/submission.html
+++ b/st-treeoflife/submission.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1 user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
     <title>submission</title>
     <link rel="manifest" href="./manifest.json">
 
@@ -36,6 +36,7 @@
         .display-text {
             margin: 25px 0;
             color: #333;
+            text-decoration: none;
         }
 
         .button {
