--- a/xmas-card-2024/index.html
+++ b/xmas-card-2024/index.html
@@ -153,7 +153,7 @@
 
             <div class="paycode-container">
               <p class="subtitle">付款</p>
-              <p>掃描以下QR code 或 <a href="https:payme.hsbc/sally6b25" target="_blank">按此打開PAYME</a></p>
+              <p>掃描以下QR code 或 <a href="https://payme.hsbc/sally6b25" target="_blank">按此打開PAYME</a></p>
               <p class="reminder">*付款必須備註 "(你的電話/ig名稱) 2024 Xmas Card"，才能處理你的訂單</p>
               <img class="paycode" src="./paycode.jpeg" alt="payme code"></a>
 
