--- a/xmas-card-2024/submission.html
+++ b/xmas-card-2024/submission.html
@@ -59,7 +59,7 @@
 
     <div class="reminder">
       <span class="material-symbols-rounded icon">warning</span>
-      <p>假如尚未付款，請<a href="https:payme.hsbc/sally6b25" target="_blank">按此連結</a>打開PAYME (付款必須備註 "<span id="submit-contact"></span> 2024 Xmas Card")</p>
+      <p>假如尚未付款，請<a href="https://payme.hsbc/sally6b25" target="_blank">按此連結</a>打開PAYME (付款必須備註 "<span id="submit-contact"></span> 2024 Xmas Card")</p>
 
     </div>
 
