--- a/xmas-card-2024/submission.html
+++ b/xmas-card-2024/submission.html
@@ -9,7 +9,6 @@
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <!-- other -->
     <script type="text/javascript" src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>    
@@ -25,7 +24,6 @@
       });
 
       function downloadCart() {
-
         const targetDiv = document.querySelector(".download");
 
         // Use html2canvas to download the "targetDiv" as an image
@@ -48,20 +46,18 @@
 <body>
 
   <header class="header">
-
     <div class="content">
       <div class="title">下單成功! 多謝支持♥♥</div>
     </div>
-
   </header>
 
   <main class="submission" style="margin: 30px">
 
-    <div class="reminder">
-      <span class="material-symbols-rounded icon">warning</span>
-      <p>假如尚未付款，請<a href="https://payme.hsbc/sally6b25" target="_blank">按此連結</a>打開PAYME (付款必須備註 "<span id="submit-contact"></span> 2024 Xmas Card")</p>
-
-    </div>
+    <p>
+      所有貨品一經成功下單付款不設退換<br><br>
+      預計到貨日期: 12月頭<br>
+      如有任何疑問 請dm @speak_slothlly<br>
+    </p>
 
     <div class="download">
       <!-- append download HTML here -->
@@ -73,10 +69,6 @@
     </div>
 
   </main>
-
-
   </div>
-
 </body>
-
 </html>
