--- a/xmas-card-2024/submission.html
+++ b/xmas-card-2024/submission.html
@@ -51,7 +51,7 @@
     </div>
   </header>
 
-  <main class="submission" style="margin: 30px">
+  <main class="submission">
 
     <p>
       所有貨品一經成功下單付款不設退換<br><br>
