--- a/xmas-card-2024/index.html
+++ b/xmas-card-2024/index.html
@@ -75,6 +75,8 @@
       
     </section>
 
+    <div class="copyright">以上原創設計均擁有版權，請支持版權，請勿下載用於其他用途。</div>
+
     <section id="lightboxes">
       <!-- append lightboxed here -->
 
