--- a/xmas-card-2024/submission.html
+++ b/xmas-card-2024/submission.html
@@ -8,7 +8,7 @@
       <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400&display=swap" rel="stylesheet">
 
     <!-- other -->
     <script type="text/javascript" src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>    
@@ -47,7 +47,7 @@
 
   <header class="header">
     <div class="content">
-      <div class="title">下單成功! 多謝支持♥♥</div>
+      <div class="title">下單成功! 多謝支持💟</div>
     </div>
   </header>
 
@@ -55,6 +55,7 @@
 
     <p>
       所有貨品一經成功下單付款不設退換<br><br>
+      
       預計到貨日期: 12月頭<br>
       如有任何疑問 請dm @speak_slothlly<br>
     </p>
