--- a/xmas-card-2024/index.html
+++ b/xmas-card-2024/index.html
@@ -56,16 +56,16 @@
   <main>
 
     <section id="filter">
-      <button class="filter-button active" data-filter="all">全部</button>
-      <button class="filter-button" data-filter="portrait">直向</button>
-      <button class="filter-button" data-filter="landscape">橫向</button>
-      <button class="filter-button" data-filter="150x100">150x100mm</button>
-      <button class="filter-button" data-filter="165x102">165x102mm</button>
-      <button class="filter-button" data-filter="100x100">100x100mm</button>
-      <button class="filter-button" data-filter="單面">單面</button>
-      <button class="filter-button" data-filter="雙面">雙面</button>
-      <button class="filter-button" data-filter="信封">信封</button>
-      <button class="filter-button" data-filter="bundle">折扣優惠</button>
+      <button type="button" filter-button active" data-filter="all">全部</button>
+      <button type="button" class="filter-button" data-filter="portrait">直向</button>
+      <button type="button" class="filter-button" data-filter="landscape">橫向</button>
+      <button type="button" class="filter-button" data-filter="150x100">150x100mm</button>
+      <button type="button" class="filter-button" data-filter="165x102">165x102mm</button>
+      <button type="button" class="filter-button" data-filter="100x100">100x100mm</button>
+      <button type="button" class="filter-button" data-filter="單面">單面</button>
+      <button type="button" class="filter-button" data-filter="雙面">雙面</button>
+      <button type="button" class="filter-button" data-filter="信封">信封</button>
+      <button type="button" class="filter-button" data-filter="bundle">折扣優惠</button>
     </section>
 
     <section id="album" class="album">
