--- a/xmas-card-2024/index.html
+++ b/xmas-card-2024/index.html
@@ -56,7 +56,7 @@
   <main>
 
     <section id="filter">
-      <button type="button" filter-button active" data-filter="all">全部</button>
+      <button type="button" class="filter-button active" data-filter="all">全部</button>
       <button type="button" class="filter-button" data-filter="portrait">直向</button>
       <button type="button" class="filter-button" data-filter="landscape">橫向</button>
       <button type="button" class="filter-button" data-filter="150x100">150x100mm</button>
