--- a/potentialhunter/index.html
+++ b/potentialhunter/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive PDF Embed</title>
+    <title>Potential Hunter</title>
     <style>
         .pdf-container {
             width: 100%;
