--- a/ota/wcm-lotterygenerator/index.html
+++ b/ota/wcm-lotterygenerator/index.html
@@ -138,7 +138,7 @@
             const [a, b] = randomBaseNum ? pickRandomNumbers(1, 4, 2) : [parseInt(document.getElementById('a').value), parseInt(document.getElementById('b').value)];
             const [x, y] = randomBaseNum ? pickRandomNumbers(6, 10, 2) : [parseInt(document.getElementById('x').value), parseInt(document.getElementById('y').value)];
             
-            const pool = Array.from({
+            let pool = Array.from({
               length: 5
             }, (_, i) => {
               if (i === a || i === b) {
@@ -148,6 +148,7 @@
               }
               return [a, b, x, y].map(num => 10 * i + num).filter(n => n !== 50);
             });
+            pool[0] = pool[0].filter(n => n !== 0);
             const results = generateResults(pool, resultCount, allowDuplicates);
             
             // Display algorithm details
@@ -166,8 +167,7 @@
             results.forEach((result, i) => {
               const resultDiv = document.createElement('div');
               resultDiv.className = "bg-gray-50 rounded-lg p-3";
-              resultDiv.innerHTML = `
-													<h3 class="text-md font-medium text-gray-800 mb-3">第${i+1}注:</h3>`;
+              resultDiv.innerHTML = `<h3 class="text-md font-medium text-gray-800 mb-3">第${i+1}注:</h3>`;
               const ballsContainer = document.createElement('div');
               ballsContainer.className = "flex flex-wrap gap-1 mb-1";
               result.forEach(num => ballsContainer.appendChild(createBall(num)));
