--- a/ota/winnykitchen.html
+++ b/ota/winnykitchen.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>施房料理食譜</title>
+    <title>施房料理計數機</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
     <style>
@@ -98,8 +98,8 @@
     <div class="min-h-screen p-4 md:p-8">
         <div class="max-w-4xl mx-auto">
             <header class="text-center mb-8">
-                <h1 class="text-3xl md:text-4xl font-bold text-gray-800 mb-2">施房料理食譜:D</h1>
-                <p class="text-gray-600">食譜份量計數機</p>
+                <h1 class="text-3xl md:text-4xl font-bold text-gray-800 mb-2">施房料理:D</h1>
+                <p class="text-gray-600">食譜份量計算</p>
             </header>
             
             <div class="recipe-card p-6 md:p-8 mb-8">
@@ -246,13 +246,17 @@
                     </div>
                     <div class="w-1/2 md:w-1/4 pl-1 pr-1">
                         <select class="ingredient-unit w-full px-3 py-2 border border-gray-300 rounded-lg" data-id="${ingredientCount}">
-                            <option value="g">grams (g)</option>
-                            <option value="kg">kilograms (kg)</option>
-                            <option value="ml">milliliters (ml)</option>
-                            <option value="l">liters (l)</option>
-                            <option value="tbsp">tablespoons</option>
-                            <option value="tsp">teaspoons</option>
-                            <option value="cup">cups</option>
+                            <option value="g">克 (g)</option>
+                            <option value="kg">公斤 (kg)</option>
+                            <option value="ml">毫升 (ml)</option>
+                            <option value="l">公升 (l)</option>
+                            <option value="lb">磅 (lb)</option>
+                            <option value="oz">安士 (oz)</option>
+                            <option value="斤">斤</option>
+                            <option value="兩">兩</option>
+                            <option value="湯匙">湯匙</option>
+                            <option value="茶匙">茶匙</option>
+                            <option value="杯">杯</option>
                         </select>
                     </div>
                     <div class="w-full md:w-auto mt-2 md:mt-0 md:pl-1">
