--- a/martinsconcert.html
+++ b/martinsconcert.html
@@ -8,8 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
-            /* background-image: url('https://images.pexels.com/photos/3971983/pexels-photo-3971983.jpeg'); */
-            background-image: url('https://images.pexels.com/photos/11895469/pexels-photo-11895469.jpeg');
+            background-image: url('https://images.pexels.com/photos/3971983/pexels-photo-3971983.jpeg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -107,9 +106,13 @@
 
             <div class="my-6 text-sm font-medium text-gray-800">
                 
-                <div>日期：2025年8月3日</div>
+                <div>日期：2025年8月3日 (星期日)</div>
                 <div class="py-1">時間：晚上8點</div>
-                <div>地點：香港大會堂演奏廳</div>
+                <div>地點：香港大會堂演奏廳 (香港站A出口/中環站K出口)</div>
+            </div>
+
+            <div class="mb-8">
+                <img src="https://www.lcsd.gov.hk/common/en/images/Map_EC_202208_B_v12.png">
             </div>
 
             <form id="form">
@@ -139,7 +142,7 @@
                     </div>
 
                     <!-- Submit Button -->
-                    <button type="submit" id="submit-button" class="submit-button w-full bg-indigo-600 text-white font-medium py-3 px-4 rounded-lg hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 mt-8">
+                    <button type="submit" id="submit-button" class="submit-button w-full bg-indigo-600 text-white font-medium py-3 px-4 rounded-lg hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
                         提交
                     </button>
 
