--- a/martinsconcert.html
+++ b/martinsconcert.html
@@ -100,15 +100,16 @@
     <div class="overlay"></div>
     <div class="form-container w-full max-w-md rounded-xl shadow-lg overflow-hidden">
         <div class="p-8">
-            <div class="my-1 text-sm font-medium text-gray-800 text-center">誠意邀請你蒞臨</div>
+            <div class="my-1 mb-3 text-sm font-medium text-gray-800 text-center">誠意邀請你蒞臨</div>
             <h2 class="text-2xl font-bold text-gray-800 text-center">Martin's Piano Concert</h2>
-            
 
-            <div class="my-6 text-sm font-medium text-gray-800">
-                
-                <div>日期：2025年8月3日 (星期日)</div>
-                <div class="py-1">時間：晚上8點</div>
-                <div>地點：香港大會堂演奏廳 (香港站A出口/中環站K出口)</div>
+
+            <div class="mt-6 mb-4 text-sm font-medium text-gray-800">
+
+                <div class="pb-1">日期：2025年8月3日 (星期日)</div>
+                <div class="pb-1">時間：晚上8點</div>
+                <div class="pb-1">地點：香港大會堂演奏廳 (香港站A出口/中環站K出口)</div>
+                <a href="https://maps.app.goo.gl/jmrGvuTwVHsTJ45t9" class="pl-11 text-indigo-700 underline">打開Google Maps地圖</a>
             </div>
 
             <div class="mb-8">
@@ -152,7 +153,7 @@
             <!-- Feedback Message (Hidden by default) -->
             <div id="message"
                 class="hidden mt-5 p-4 border rounded-lg text-center bg-green-50 border-green-200 text-green-700">
-                </div>
+            </div>
 
         </div>
 
