--- a/martinsconcert.html
+++ b/martinsconcert.html
@@ -108,12 +108,14 @@
 
                 <div class="pb-1">日期：2025年8月3日 (星期日)</div>
                 <div class="pb-1">時間：晚上8點</div>
-                <div class="pb-1">地點：香港大會堂演奏廳 (香港站A出口/中環站K出口)</div>
-                <a href="https://maps.app.goo.gl/jmrGvuTwVHsTJ45t9" class="pl-11 text-indigo-700 underline">打開Google Maps地圖</a>
+                <div class="pb-1">地點：香港大會堂演奏廳</div>
+                <div class="pl-10 pb-1">(香港站A出口/中環站K出口)</div>
+                
             </div>
 
             <div class="mb-8">
                 <img src="https://www.lcsd.gov.hk/common/en/images/Map_EC_202208_B_v12.png">
+                <a href="https://maps.app.goo.gl/jmrGvuTwVHsTJ45t9" class="mt-6 mb-4 text-sm font-medium text-gray-800 text-indigo-700 underline">打開Google Maps地圖</a>
             </div>
 
             <form id="form">
